'stupid' and 'simple' algorithm added for path finding, GUI extended

--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
 
 	</head>
 		<body>
+			<input class="ui-button" id="resetBtn" type="button" value="Reset" />
+			<input class="ui-button" id="autoMoveChecker" type="button" value="Auto">
+			<input class="ui-button" id="HUDToggle" type="button" value="HUD">
 
-			<div id="ui">
-				<input id="resetBtn" type="button" value="Reset" />
+			<input class="brain-button" id="stupid" type="button" value="Stupid">
+			<input class="brain-button" id="simple" type="button" value="Simple">
+
+			<div id="HUD">
 				<div id="agent-pos"></div>
 				<div id="agent-history-holder">
 					<div id="agent-history" class="scroll"></div>
