brain separated from agent

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 
 		<!-- Internal Libraries -->
 		<script src="js/internal/eventListeners.js"></script>
+		<script src="js/internal/stopwatch.js"></script>
 		<script src="js/internal/renderer.js"></script>
 		<script src="js/internal/sprite.js"></script>
 		<script src="js/internal/square.js"></script>
+		<script src="js/internal/brain.js"></script>
 		<script src="js/internal/agent.js"></script>
 		<script src="js/internal/environment.js"></script>
 		<script src="js/internal/main.js"></script>
@@ -35,9 +37,6 @@
 	</head>
 
 		<body>
-			<script>
-				$( document ).tooltip();
-			</script>
 
 			<div id="brain-symbol">
 				<i class="fa fa-graduation-cap fa-fw fa-3x" ></i>
