--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 			<!---------------------->
 			<input class="brain-button button" id="stupid" type="button" value="Stupid">
 			<input class="brain-button button" id="simple" type="button" value="Simple">
+			<input class="brain-button button" id="forward" type="button" value="Forward">
 
 
 			<!---------------------->
