forward working, careful added

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 			<input class="brain-button button" id="stupid" type="button" value="Stupid">
 			<input class="brain-button button" id="simple" type="button" value="Simple">
 			<input class="brain-button button" id="forward" type="button" value="Forward">
+			<input class="brain-button button" id="careful" type="button" value="Careful">
 
 
 			<!---------------------->
