--- a/index.html
+++ b/index.html
@@ -38,69 +38,64 @@
 
 		<body>
 
-			<div id="brain-symbol">
-				<i class="fa fa-graduation-cap fa-fw fa-3x" ></i>
-			</div>
+			<div id="all-holder">
 
-			<!---------------------->
-			<!-- UI Round buttons -->
-			<!---------------------->
-			<button id="reset-div" class="ui-button button" value="Reset" title="Reset agent (R)">
-				<i class="fa fa-step-backward fa-fw fa-1x agent-icon"></i>
-			</button>
+					<div id="agent-current-status" class="HUD">
+						<div class="agent-info-cell description">Moves</div>
+						<div class="agent-info-cell description">Position</div>
+						<div class="agent-info-cell description">Reward</div>
+						<div class="agent-info-cell description">Total Reward</div>
 
-			<button id="play-div" class="ui-button button" value="Auto" title="Auto move (space)">
-				<i class="fa fa-play fa-fw fa-1x agent-icon"></i>
-			</button>
+						<div class="agent-info-cell" id="agent-n-moves"></div>
+						<div class="agent-info-cell" id="agent-pos"></div>
+						<div class="agent-info-cell" id="agent-reward"></div>
+						<div class="agent-info-cell" id="agent-tot-reward"></div>
+					</div>
 
-			<button id="speed-down-div" class="ui-button button" value="SpeedDown" title="Speed down (,)">
-				<i class="fa fa-arrow-down fa-fw fa-1x agent-icon"></i>
-			</button>
-
-			<button id="speed-up-div" class="ui-button button" value="SpeedUp" title="Speed up (.)">
-				<i class="fa fa-arrow-up fa-fw fa-1x agent-icon"></i>
-			</button>
-
-			<button id="gauge-div" class="ui-button button" value="HUD" title="Head up display (H)">
-				<i class="fa fa-tachometer fa-fw fa-1x gauge-icon"></i>
-			</button>
-
-			<button id="theme-div" class="ui-button button" value="Theme" title="Dark/Light theme (T)">
-				<i class="fa fa-lightbulb-o fa-fw fa-1x theme-icon"></i>
-			</button>
-
-			<!---------------------->
-			<!--- Brain buttons ---->
-			<!---------------------->
-			<input class="brain-button button" id="stupid" type="button" value="Stupid">
-			<input class="brain-button button" id="simple" type="button" value="Simple">
-			<input class="brain-button button" id="forward" type="button" value="Forward">
-			<input class="brain-button button" id="careful" type="button" value="Careful">
-
-
-			<!---------------------->
-			<!---      HUD      ---->
-			<!---------------------->
-			<div id="HUD">
-				<div id="agent-current-status">
-					<div class="agent-info-cell description">moves</div>
-					<div class="agent-info-cell description">position</div>
-					<div class="agent-info-cell description">reward</div>
-					<div class="agent-info-cell description">total reward</div>
-
-					<div class="agent-info-cell" id="agent-n-moves"></div>
-					<div class="agent-info-cell" id="agent-pos"></div>
-					<div class="agent-info-cell" id="agent-reward"></div>
-					<div class="agent-info-cell" id="agent-tot-reward"></div>
+				<!---------------------->
+				<!--- Brain buttons ---->
+				<!---------------------->
+				<div id="brain-holder">
+					<div id="brain-symbol">
+						<i class="fa fa-graduation-cap fa-fw fa-3x" ></i>
+					</div>
+					<input class="brain-button button" id="stupid" type="button" value="Stupid">
+					<input class="brain-button button" id="simple" type="button" value="Simple">
+					<input class="brain-button button" id="forward" type="button" value="Forward">
+					<input class="brain-button button" id="careful" type="button" value="Careful">
+					<input class="brain-button button" id="value" type="button" value="Value">
+					<input class="brain-button button" id="policy" type="button" value="Policy">
 				</div>
 
-				<div id="agent-history-holder">
+				<div id="canvas"></div>
+
+				<div id="agent-history-holder" >
 					<div id="agent-history" class="scroll"></div>
 				</div>
+				<!---------------------->
+				<!-- UI Round buttons -->
+				<!---------------------->
+				<div id="ui-holder">
+					<button id="play-div" class="ui-button button" value="Auto" title="Auto move (space)">
+						<i class="fa fa-play fa-fw fa-1x "></i>
+					</button>
+
+					<button id="reset-div" class="ui-button button" value="Reset" title="Reset agent (R)">
+						<i class="fa fa-step-backward fa-fw fa-1x"></i>
+					</button>
+
+					<button id="speed" class="ui-button button" value="Speed" title="Slow(,)/Fast(.)">
+						<i class="fa fa-rocket fa-fw fa-1x"></i>
+					</button>
+
+					<button id="gauge-div" class="ui-button button" value="HUD" title="Head up display (H)">
+						<i class="fa fa-tachometer fa-fw fa-1x gauge-icon"></i>
+					</button>
+
+					<button id="theme-div" class="ui-button button" value="Theme" title="Dark/Light theme (T)">
+						<i class="fa fa-lightbulb-o fa-fw fa-1x theme-icon"></i>
+					</button>
+				</div>
 			</div>
-
-			<div id="canvas"></div>
-
-
 	</body>
 </html>
