brain updates environment in future searches

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 						<i class="fa fa-step-backward fa-fw fa-1x"></i>
 					</button>
 
-					<button id="speed" class="ui-button button" value="Speed" title="Slow(,)/Fast(.)">
+					<button id="speed" class="ui-button button" value="Speed" title="Slow/Fast (Q)">
 						<i class="fa fa-rocket fa-fw fa-1x"></i>
 					</button>
 
 					<button id="gauge-div" class="ui-button button" value="HUD" title="Head up display (H)">
-						<i class="fa fa-tachometer fa-fw fa-1x gauge-icon"></i>
+						<i class="fa fa-list-ol	 fa-fw fa-1x gauge-icon"></i>
 					</button>
 
 					<button id="theme-div" class="ui-button button" value="Theme" title="Dark/Light theme (T)">
