finally some value iteration yeueueteeye

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<div id="agent-current-status" class="HUD">
 						<div class="agent-info-cell description">Moves</div>
 						<div class="agent-info-cell description">Position</div>
-						<div class="agent-info-cell description">Reward</div>
+						<div class="agent-info-cell description">Curr Utility</div>
 						<div class="agent-info-cell description">Total Reward</div>
 
 						<div class="agent-info-cell" id="agent-n-moves"></div>
@@ -65,6 +65,9 @@
 					<input class="brain-button button" id="careful" type="button" value="Careful">
 					<input class="brain-button button" id="value" type="button" value="Value">
 					<input class="brain-button button" id="policy" type="button" value="Policy">
+
+					<input class="special-button button" id="random_map" type="button" value="Random Map">
+					<input class="special-button button" id="update_squares" type="button" value="Update Squares">
 				</div>
 
 				<div id="canvas"></div>
