--- a/index.html
+++ b/index.html
@@ -79,23 +79,28 @@
 				<!---------------------->
 				<div id="ui-holder">
 					<button id="play-div" class="ui-button button" value="Auto" title="Auto move (space)">
-						<i class="fa fa-play fa-fw fa-1x "></i>
+						<!--<i class="fa fa-play fa-fw fa-1x "></i>-->
+						play
 					</button>
 
 					<button id="reset-div" class="ui-button button" value="Reset" title="Reset agent (R)">
-						<i class="fa fa-step-backward fa-fw fa-1x"></i>
+						<!--<i class="fa fa-step-backward fa-fw fa-1x"></i>-->
+						reset
 					</button>
 
 					<button id="speed" class="ui-button button" value="Speed" title="Slow/Fast (Q)">
-						<i class="fa fa-rocket fa-fw fa-1x"></i>
+						<!--<i class="fa fa-rocket fa-fw fa-1x"></i>-->
+						speed
 					</button>
 
 					<button id="gauge-div" class="ui-button button" value="HUD" title="Head up display (H)">
-						<i class="fa fa-list-ol	 fa-fw fa-1x gauge-icon"></i>
+						<!--<i class="fa fa-list-ol	 fa-fw fa-1x gauge-icon"></i>-->
+						HUD
 					</button>
 
 					<button id="theme-div" class="ui-button button" value="Theme" title="Dark/Light theme (T)">
-						<i class="fa fa-lightbulb-o fa-fw fa-1x theme-icon"></i>
+						<!--<i class="fa fa-lightbulb-o fa-fw fa-1x theme-icon"></i>-->
+						theme
 					</button>
 				</div>
 			</div>
